data-app/objects/Volunteer_Event_c_Home__dlm/fields/mvpbo3_City_c__c.field-meta.xml
<CustomField>
    <fullName>mvpbo3_City_c__c</fullName>
    <label>City</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>City</labelOverride>
        <masterLabel>City</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>