data-app/objects/Volunteer_Event_c_Home__dlm/fields/mvpbo3_Description_c__c.field-meta.xml
<CustomField>
    <fullName>mvpbo3_Description_c__c</fullName>
    <label>Description</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Description</labelOverride>
        <masterLabel>Description</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>