data-app/objects/Volunteer_Event_c_Home__dlm/fields/mvpbo3_Event_End_c__c.field-meta.xml
<CustomField>
    <fullName>mvpbo3_Event_End_c__c</fullName>
    <label>Event End</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Event End</labelOverride>
        <masterLabel>Event End</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>