data-app/objects/Volunteer_Event_c_Home__dlm/fields/mvpbo3_Event_Start_c__c.field-meta.xml
<CustomField>
    <fullName>mvpbo3_Event_Start_c__c</fullName>
    <label>Event Start</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Event Start</labelOverride>
        <masterLabel>Event Start</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>