data-app/objects/Volunteer_Event_c_Home__dlm/fields/mvpbo3_Location_Name_c__c.field-meta.xml
<CustomField>
    <fullName>mvpbo3_Location_Name_c__c</fullName>
    <label>Location Name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Location Name</labelOverride>
        <masterLabel>Location Name</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>