data-app/objects/Volunteer_Event_c_Home__dlm/fields/mvpbo3_Phone_c__c.field-meta.xml
<CustomField>
    <fullName>mvpbo3_Phone_c__c</fullName>
    <label>Phone</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Phone</labelOverride>
        <masterLabel>Phone</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Phone</type>
</CustomField>