data-app/objects/Volunteer_Event_c_Home__dlm/fields/mvpbo3_Postal_Code_c__c.field-meta.xml
<CustomField>
    <fullName>mvpbo3_Postal_Code_c__c</fullName>
    <label>Postal Code</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Postal Code</labelOverride>
        <masterLabel>Postal Code</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>