data-app/objects/Volunteer_Event_c_Home__dlm/fields/mvpbo3_State_c__c.field-meta.xml
<CustomField>
    <fullName>mvpbo3_State_c__c</fullName>
    <label>State</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>State</labelOverride>
        <masterLabel>State</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>