data-app/objects/Volunteer_Event_c_Home__dlm/fields/SfdcOrganizationId__c.field-meta.xml
<CustomField>
    <fullName>SfdcOrganizationId__c</fullName>
    <label>SfdcOrganizationId</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>SfdcOrganizationId</labelOverride>
        <masterLabel>SfdcOrganizationId</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>